[project]
name = "see-ensemble"
version = "0.1.0"
description = "Ensemble regression for Software Effort Estimation (Carvalho et al. reproduction)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24,<3",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "scipy>=1.11",
]

[tool.uv.sources]
# optional: pin or use workspace deps
# (none needed for now)
